--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <body>
 
     <h1>Welcome</h1>
-    <p>My First Website Deploy</p>
+    <p>
+        My First Website Deploy
+    </p>
 </body>
 </html>
